# teleOS

./: GNUmakefile  README.md  limine.conf
kernel/: Cargo.toml  GNUmakefile
kernel/.cargo/: config.toml
kernel/src/: apic.rs  boot.rs  gdt.rs  interrupt.rs  lib.rs  main.rs
kernel/src/framebuffer/: fps.rs  mod.rs  screen.rs  writer.rs
kernel/src/framebuffer/screen/: framework.rs  mod.rs  tv.rs
kernel/src/memory/: heap.rs  mod.rs
kernel/src/tests/: framebuffer.rs  heap.rs  mod.rs
