[package]
name = "limine-rust-template"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5"
spin = "0.10.0"
x86_64 = "0.15.2"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
