[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5"
spin = "0.10.0"
x86_64 = "0.15.2"
uart_16550 = "0.4.0"
volatile = "0.6.1"
font8x8 = { version = "0.3", default-features = false }
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[lib]
name = "kernel"
path = "src/lib.rs"
test = false
bench = false

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[features]
qemu_test = []
